regression issue with body being too wide and uncentered text.  Fixed issue with grid items not having margin

--- a/src/scss/_weekly.scss
+++ b/src/scss/_weekly.scss
@@ -14,7 +14,8 @@
         border: #fff medium solid;
         border-radius: 5px;
         margin-right: 20px;
-        @media only screen and (min-device-width : 768px) {
+        margin-bottom: 5px;
+        @media only screen and (min-device-width: 768px) {
             margin-bottom: 15px;
         }
     }
@@ -35,7 +36,7 @@
     margin-top: 15px;
     margin-bottom: 5px;
     width: 100%;
-    text-align: left;
+    text-align: center;
     font-size: 2rem;
 }
 
